<resources>
    <string name="app_name">OrahiApp</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_friends">Friends</string>
    <string name="action_wekume">Wekume</string>
    <string name="action_profile">Profile</string>
    <string name="action_about_us">About Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_service">ServiceActivity</string>


    <string name="search_hint">Search for Service Provider</string>
    <string name="search_label">Service Provider</string>
    <string name="search_global_description">Search Service Providers</string>
    <string name="search_title">Search</string>
    <string name="parallax">Expand/Collapse</string>
    <string name="expand">Expand/Collapse</string>

    <string name="allClearButtonText">I am Safe and Well</string>
    <string name="maydayButtonText">MAYDAY! MAYDAY! MAYDAY!</string>
    <string name="setupautoresponderButtonText">Setup Auto Responder</string>
    <string name="allClearText">I am safe and well. Worry not!</string>
    <string name="maydayText">Tell my mother I love her.</string>
    <string name="querystring">orahi wekume are you ok?</string>
    <string name="querylistprompt">These people want to know if you\'re ok</string>
    <string name="includelocationprompt">Include Location in Reply</string>

    <string name="user_preferences">com.paad.emergencyresponder.preferences</string>
    <string name="respondWithPrompt">Respond with</string>
    <string name="transmitLocationPrompt">Transmit location</string>
    <string name="autoRespondDurationPrompt">Auto-respond for</string>
    <string name="enableButtonText">Enable</string>
    <string name="disableButtonText">Disable</string>
    <string name="title_activity_services">ServicesActivity</string>


</resources>
